<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Student.MainActivity">

    <ImageView
        android:id="@+id/NavIcon"

        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginRight="@dimen/_12sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_menu"
        app:tint="@color/colorIcons"
       app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

  <TextView
      android:id="@+id/textMyNotes"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/_100sdp"
      android:layout_marginLeft="@dimen/_12sdp"
      android:layout_marginTop="@dimen/_20sdp"
      android:layout_marginEnd="@dimen/_12sdp"
      android:text="@string/my_notes"
      android:textColor="#FFFFFF"
      android:textSize="@dimen/_20ssp"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_marginRight="@dimen/_12sdp" />

    <LinearLayout
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingLeft="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/textMyNotes">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorPrimary"
            android:elevation="8dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:src="@drawable/search_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="Search..." />
        </RelativeLayout>


        <EditText
            android:layout_width="@dimen/_210sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginLeft="@dimen/_12sdp"
            android:background="@null"
            android:hint="@string/search_notes"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="text"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorTextHint"
            android:textSize="@dimen/_13ssp"


            />
        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_close"
            app:tint="@color/colorSearchIcon" />




    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginLeft="@dimen/_2sdp"
        android:layout_marginEnd="@dimen/_2sdp"
        android:clipToPadding="false"
        android:paddingStart="0dp"
        android:paddingLeft="0dp"
        android:paddingEnd="@dimen/_12sdp"
        android:paddingRight="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutSearch"/>


    <ImageView
        android:id="@+id/imageAddNotes"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"

        android:background="@drawable/background_notes_add"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_add"
        app:tint="@color/colorPrimary"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_15sdp"/>

        /*
        app:layout_constraintBottom_toTopOf="@+id/layoutQuickActions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/layoutQuickActions"
    /*



</androidx.constraintlayout.widget.ConstraintLayout>